# game.moonlight

./: .gitignore  CMakeLists.txt  Readme.md
depends/common/enet/: 0001-cmake-Add-missing-install-scripts-and-set-PIC-to-ON.patch  CMakeLists.txt  enet.txt
depends/common/moonlight-common-c/: 0001-add-cmakelists.patch  CMakeLists.txt  deps.txt  moonlight-common-c.txt
depends/common/opus/: CMakeLists.txt
depends/common/pugixml/: 0001-add-cmakelists.patch  CMakeLists.txt  pugixml.txt
game.moonlight/: addon.xml  addon.xml.in
src/: MoonlightClient.cpp  MoonlightEnvironment.cpp  addon.cpp
src/callbacks/: AudioCallbacks.cpp  ConnectionCallbacks.cpp  VideoCallbacks.cpp
src/input/: InputManager.cpp  InputManager.h
src/log/: Log.cpp  Log.h  LogAddon.cpp  LogConsole.cpp  LogConsole.h
src/nvstream/: CertKeyPair.h  NvHTTP.cpp  PairingManager.cpp
